fix: icon svg alignment

--- a/assets/src/scss/components/share-buttons.scss
+++ b/assets/src/scss/components/share-buttons.scss
@@ -3,6 +3,10 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
+
+    .icon {
+      top: auto;
+    }
   }
   .line {
     background-color: #00b800;
